--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,9 @@
+import { ChevronRight } from "lucide-react";
 import { SponsorBtn } from "../components/sponsor-btn";
 import { Button } from "../components/ui/button";
 import { Notice } from "../components/notice";
 import Img from "../components/img";
-import { ChevronRight } from "lucide-react";
+import Badges from "../components/badges";
 import Link from "next/link";
 
 <div className="text-3xl font-bold mt-5">QvikChat</div>
@@ -14,7 +15,7 @@ import Link from "next/link";
   Built on top of Firebase Genkit + LangChain. Power of both, simplicity of one.
 </div>
 
-Develop a self-hosted production-ready AI-powered chat app or service at a rapic pace with this powerful [Firebase Genkit](https://github.com/firebase/genkit) and [LangChain](https://js.langchain.com/v0.2/docs/introduction/) based framework.
+Develop a self-hosted production-ready AI-powered chat app or service at a rapid pace with this powerful [Firebase Genkit](https://github.com/firebase/genkit) and [LangChain](https://js.langchain.com/v0.2/docs/introduction/) based framework.
 
 **QvikChat** is a framework that provides you with a solid foundation to build powerful AI-powered chat service endpoints quickly and efficiently. It includes support for **multiple types of conversations (open-ended, close-ended)**, **chat history**, **response caching**, **authentication**, and **information retrieval using Retrieval Augmented Generation (RAG).**
 
